# Twitter-Django

./: README.md  pyproject.toml
app/static/css/: styles.css
app/static/js/: retweet.js
app/staticfiles/css/: styles.css
app/staticfiles/js/: delete.js  like.js  retweet.js
app/templates/: base.html  configuration_profile.html  follower_list.html  following_list.html  home.html  login.html  perfil.html  register.html  tweet.html  tweet_list.html  user_profile.html
app/twitterclone/: forms.py  settings.py  urls.py  views.py
app/user/: admin.py  apps.py  models.py
app/user/migrations/: 0001_initial.py  0002_user_image_alter_user_username.py  0003_remove_follow_updated_at_remove_like_updated_at_and_more.py  0004_alter_user_image.py  0005_remove_user_followers_alter_follow_follower_and_more.py  0006_alter_follow_follower_alter_follow_following_and_more.py  0007_comment_parent_comment_tweet_is_retweet_and_more.py  0008_user_follower_count_user_following_count.py  0009_tweet_likes_tweet_retweet_comment_tweet_retweets_and_more.py  0010_rename_likes_tweet_user_likes.py  0011_rename_user_likes_tweet_users_liked.py  0012_remove_tweet_retweet_comment.py  0013_tweet_retweet_content.py  0014_alter_tweet_content.py  0015_alter_user_options_remove_tweet_retweets_and_more.py  0016_remove_tweet_retweet_content.py  0017_user_cover_image_alter_user_image.py
app/user/templatetags/: form_filters.py
