[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["Jaime Junr <jaimeodairbassojuniorjaime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
pillow = "^10.4.0"
black = "^24.8.0"
gitpython = "^3.1.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
